--- a/platformio.ini
+++ b/platformio.ini
@@ -1,10 +1,45 @@
+; ===================================================================
+; ESP32 WROOM Environment (Currently Active)
+; ===================================================================
+[env:esp32dev]
+platform = espressif32
+board = esp32dev
+framework = arduino
+
+build_flags =
+  -DESP32
+  
+lib_deps =
+  adafruit/Adafruit GFX Library
+  adafruit/Adafruit ST7735 and ST7789 Library
+  h2zero/NimBLE-Arduino@^1.4.1
+
+monitor_speed = 115200
+upload_speed = 921600
+
+; ===================================================================
+; Teensy 4.1 Environment (Switch to this when Teensy arrives)
+; To use: Click "Switch PlatformIO Project Environment" and select "teensy41"
+; ===================================================================
 [env:teensy41]
 platform = teensy
 board = teensy41
 framework = arduino
 
-monitor_speed = 115200
-
+build_flags =
+  -O3
+  -DTEENSYDUINO
+  -D__MK66FX1M0__
+  -DUSB_SERIAL
+  -DLAYOUT_US_ENGLISH
+  
+build_unflags =
+  -Os
+  
 lib_deps =
-    adafruit/Adafruit GFX Library @ ^1.11.9
-    adafruit/Adafruit ST7735 and ST7789 Library @ ^1.10.3
+  adafruit/Adafruit GFX Library
+  adafruit/Adafruit ST7735 and ST7789 Library
+
+board_build.f_cpu = 600000000L
+monitor_speed = 115200
+upload_speed = 2000000
